# snesrecomp

./: .gitignore  IMPROVEMENTS.md  ISSUES.md  README.md
docs/: GSU_STARFOX_INTERFACE.md  LAUNCHER_DESIGN.md  MSU1.md  TRIPWIRES.md
fuzz/: .gitignore  bsnes_oracle.py  coverage.py  phase_b.py  phase_b_gen.py
lib/: CMakeLists.txt
recompiler/: snes65816.py
recompiler-rs/: .gitignore  Cargo.toml  README.md
recompiler-rs/examples/: emit_one_bank.rs
recompiler-rs/scripts/: diff-golden.sh  diff_autoroute.py  diff_decode.py  diff_emit.py  dump_autoroute.py  dump_decode.py  dump_emit.py  make-golden.sh
recompiler-rs/src/: autoroute.rs  cfg.rs  cfgbuild.rs  codegen.rs  cycles.rs  decoder.rs  emit.rs  insn.rs  ir.rs  lib.rs  lowering.rs  rom.rs  widths.rs
recompiler-rs/tests/: parse_corpus.rs
recompiler/v2/: cfg_loader.py  codegen.py  cycle_tables.py  decoder.py  emit_bank.py  emit_function.py  emitter_helpers.py  exit_mx_autoroute.py  ir.py  lowering.py  wrapper_autoroute.py
runner/: runner.cmake
runner/src/: audio_trace.c  audio_trace.h  capture.c  capture.h  common_cpu_infra.c  common_cpu_infra.h  common_rtl.c  common_rtl.h  cpu_state.c  cpu_state.h  cpu_trace.c  cpu_trace.h  debug_server.c  debug_server.h  emu_oracle_cmds.c  launcher.c  launcher.h  sched.c  sched.h  snes9x_bridge.cpp  widescreen.h
runner/src/launcher/: launcher_capi.h  launcher_gui.cpp  launcher_gui.h
runner/src/launcher/assets/: launcher.rml
runner/src/launcher/assets/img/: brand_mark.tga  snes_pad.tga
runner/src/snes/: dsp.c  dsp.h  gsu.c  gsu.h  msu1.c  msu1.h  ppu.c  ppu.h  snes.c  snes.h  snes_other.c  test_gsu.c
scripts/: diff_gen.py
tests/v2/: run_tests.py  test_cfg_loader.py  test_codegen_per_op_smoke.py  test_decoder_callee_exit_mx.py  test_decoder_callee_exit_mx_per_variant.py  test_decoder_data_region.py  test_decoder_dispatch_padding_gate.py  test_decoder_inline_param_skip.py  test_decoder_reloc.py  test_decoder_smc_phantom_suppression.py  test_dispatcher_phk_per_jml.py  test_emit_bank_smoke.py  test_emit_function_smoke.py  test_emit_function_tail_call_past_end.py  test_exit_mx_autoroute.py  test_indirect_dispatch_parallel_tables.py  test_lowering_per_op_smoke.py  test_nlr_idiom.py  test_prune_unresolved_indirect_goto.py  test_v2_emit_lint.py  test_wrapper_autoroute.py
tools/: assemble_movie.sh  build_launcher_deps.ps1  cfg_apply_audit_fixes.py  cfg_exclude_range_audit.py  v2_regen.py  v2_sync_funcs_h.py
tools/diag/: cf_debt_asm_context.py  cf_debt_report.py
tools/snes-oracle/: .gitignore  README.md  build.bat  frontend.cpp
tools/sneslib/commands/: screenshot.py
tools/snesref/: frontend.cpp
