[package]
name = "snesrecomp-regen"
version = "0.1.0"
edition = "2021"
description = "Rust port of the snesrecomp v2 static recompiler (regen pipeline)"
license = "MIT"

[lib]
name = "snesrecomp_regen"
path = "src/lib.rs"

[[bin]]
name = "regen"
path = "src/bin/regen.rs"

[[bin]]
name = "sync-funcs-h"
path = "src/bin/sync_funcs_h.rs"

[[bin]]
name = "dump-decode"
path = "src/bin/dump_decode.rs"

[[bin]]
name = "dump-emit"
path = "src/bin/dump_emit.rs"

[[bin]]
name = "dump-snippet"
path = "src/bin/dump_snippet.rs"

[[bin]]
name = "dump-autoroute"
path = "src/bin/dump_autoroute.rs"

[[bin]]
name = "chase-misses"
path = "src/bin/chase_misses.rs"

[dependencies]
rayon = "1"
serde_json = "1"
regex = "1"

[profile.release]
opt-level = 3
lto = "thin"

[dev-dependencies]
